# Metaheuristics

./: .gitignore  CMakeLists.txt  GAvsGR.docx  Metaheuristics.sln  wykresy.xlsx
Main/: AgedPopulation.cpp  AgedPopulation.h  Algorithm.cpp  Algorithm.h  AlgorithmsRunner.cpp  AlgorithmsRunner.h  CSVWriter.cpp  Config.h  Controller.cpp  Controller.h  Creature.cpp  Creature.h  DistanceMatrix.cpp  DistanceMatrix.h  GAAgeAlgorithm.cpp  GAAgeAlgorithm.h  GAAlgorithm.cpp  GAAlgorithm.h  GATSAlgorithm.cpp  GATSAlgorithm.h  GreedyAlgorithm.cpp  GreedyAlgorithm.h  Instance.h  Loader.cpp  Loader.h  Main.cpp  Main.h  Main.vcxproj  Main.vcxproj.filters  Math.h  MetaAlgorithm.cpp  MetaAlgorithm.h  Population.cpp  Population.h  Problem.cpp  Problem.h  SAAlgorithm.cpp  SAAlgorithm.h  TSPAlgorithm.h  TabuAlgorithm.cpp  (+14 more)
Main/tabuCSV/: tabu.csv
TSP/: Main.cpp  Main.h  TSP.vcxproj  config.cfg
Test/: Test.cpp  Test.vcxproj
